# TokamakReactor-HPC-Simulation

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
docs/: RESULTS.md
include/core/: field.h  grid.h  time_integrator.h
include/coupling/: multi_physics_coupler.h
include/io/: data_writer.h  diagnostics.h
include/physics/: current_quench.h  disruption_mitigation.h  mhd_solver.h  runaway_electrons.h  thermal_quench.h
include/utils/: physical_constants.h
scripts/: generate_visualizations.py  visualize.py
src/: dump_fields.cpp  main.cpp
src/core/: field.cpp  grid.cpp  time_integrator.cpp
src/coupling/: multi_physics_coupler.cpp
src/io/: data_writer.cpp  diagnostics.cpp
src/physics/: current_quench.cpp  disruption_mitigation.cpp  mhd_solver.cpp  runaway_electrons.cpp  thermal_quench.cpp
src/utils/: physical_constants.cpp
tests/: test_main.cpp  test_physics_validation.cpp
